nav bar contrast fix

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -24,7 +24,7 @@ h2 {
 }
 .main-nav a {
     text-decoration: none;
-    color: red;
+    color: #7B0000;
 }
 
 .nav-divider {
